apps/applications/tools/n8n/app/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: n8n
  namespace: default
spec:
  serviceName: n8n
  replicas: 1
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      containers:
        - command:
            - /bin/sh
          args:
            - -c
            - sleep 5; n8n start
          name: n8n
          image: docker.n8n.io/n8nio/n8n:1.109.1
          volumeMounts:
            - name: data
              mountPath: /home/node/.n8n
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: n8n-config-pvc
