apps/applications/tools/n8n/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n-ui
  namespace: default
spec:
  selector:
    app: n8n
  ports:
    - port: 5678
