apps/applications/tools/n8n/app/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n-route
  namespace: default # Where your application is deployed
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "n8n.kerrlab.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: n8n-ui
          port: 5678
